# data_gov_uk

./: .gitignore  README.md  pyproject.toml
data_gov_uk/: api.py  exceptions.py
