[project]
name = "data-gov-uk"
version = "0.1.0"
description = "API to access, search, filter, and get data from data.gov.uk"
authors = [
    {name = "Dev Anand Anbarasu",email = "anand26dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
